--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -7,13 +7,29 @@ services:
       - "3000:3000"
     user: node
     build: 
-      context: ./frontend
       dockerfile: Dockerfile
+      context: ./app/frontend
     command: >
       sh -c "npm i && npm run dev"
     volumes:
-      - ./frontend:/frontend
-      - ./frontend/node_modules:/frontend/node_modules
+      - ./app/frontend:/frontend
+      - ./app/frontend/node_modules:/frontend/node_modules
+    networks:
+      - app-network
+    restart: always
+
+  server:
+    ports:
+      - "8080:8080"
+    user: node
+    build: 
+      dockerfile: Dockerfile
+      context: ./app/server
+    command: >
+      sh -c "npm i && npm run start"
+    volumes:
+      - ./app/server:/server
+      - ./app/server/node_modules:/server/node_modules
     networks:
       - app-network
     restart: always
