--- a/.prettierrc
+++ b/.prettierrc
@@ -7,5 +7,9 @@
   "trailingComma": "none",
   "bracketSpacing": true,
   "bracketSameLine": true,
-  "vueIndentScriptAndStyle": true
+  "vueIndentScriptAndStyle": true,
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "tailwindConfig": "./frontend/tailwind.config.ts",
+  "tailwindPreserveWhitespace": false,
+  "tailwindPreserveDuplicates": false
 }
