--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,5 +10,9 @@
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@vueuse/nuxt": "^11.2.0",
     "nuxt": "^3.13.1"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8"
   }
 }
