--- a/.prettierrc
+++ b/.prettierrc
@@ -6,7 +6,7 @@
   "singleQuote": true,
   "trailingComma": "none",
   "bracketSpacing": true,
-  "bracketSameLine": true,
+  "bracketSameLine": false,
   "vueIndentScriptAndStyle": true,
   "plugins": ["prettier-plugin-tailwindcss"],
   "tailwindConfig": "./frontend/tailwind.config.ts",
