--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
   },
   "devDependencies": {
     "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.8"
+    "prettier-plugin-tailwindcss": "^0.6.8",
+    "typescript": "^5.6.3",
+    "vue-tsc": "^2.1.10"
   }
 }
