--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,14 @@
   "scripts": {
     "dev": "nuxt dev --hostname 0.0.0.0"
   },
+  "overrides": {
+    "vue": "latest"
+  },
   "dependencies": {
     "@nuxt/fonts": "^0.10.2",
     "@nuxt/icon": "^1.6.1",
     "@nuxtjs/tailwindcss": "^6.12.2",
+    "@pinia/nuxt": "^0.7.0",
     "@vueuse/nuxt": "^11.2.0",
     "nuxt": "^3.13.1"
   },
